# alpha-scuffed

./: Cargo.toml  README.md
src/: candle_ai.rs  checkers.rs  dataset.rs  game.rs  hex.rs  main.rs  mcts.rs  model.rs
