[package]
name = "alpha-scuffed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rand = "0.8"
ego-tree = "0.9.0"
itertools = "0.13"
ordered-float = "4.4"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
serde = "1.0.213"
serde_json = "1.0.132"
serde-big-array = "0.5.1"
ndarray = "0.16.1"
tinyvec = "1.8"

[profile.release]
debug = true